--- a/app/src/main/res/drawable/rec_items_shape.xml
+++ b/app/src/main/res/drawable/rec_items_shape.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <solid android:color="#FFF"/>
-    <corners android:radius="10dp"/>
+    <corners android:radius="20sp"/>
 </shape>
