--- a/app/src/main/res/layout/adapter_favourite_style.xml
+++ b/app/src/main/res/layout/adapter_favourite_style.xml
@@ -1,83 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/Card"
-    android:layout_width="170dp"
-    android:layout_height="wrap_content"
-    android:padding="5dp"
-    android:layout_margin="10dp"
-    android:background="@drawable/rec_items_shape"
-    android:elevation="5dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
-
-
-    <RelativeLayout
-        android:layout_width="match_parent"
+    <android.support.v7.widget.CardView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:card_view="http://schemas.android.com/tools"
+        android:id="@+id/Card"
+        android:layout_width="wrap_content"
+        android:background="@drawable/rec_items_shape"
+        android:layout_margin="5dp"
+        android:elevation="5dp"
+        card_view:cardUseCompatPadding="true"
         android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/thumbnail"
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="160dp"
-            android:src="@drawable/millkingone"
-            android:layout_marginBottom="20sp"
-            android:layout_margin="5dp"
-            android:background="?attr/selectableItemBackgroundBorderless"
-            android:clickable="true"
-            android:scaleType="fitXY"
-            android:transitionName="transition"
-            />
-
-
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_below="@+id/thumbnail"
+            android:orientation="vertical"
             android:layout_height="wrap_content">
 
 
-
-            <LinearLayout
-                android:layout_width="90dp"
-                android:orientation="vertical"
-                android:gravity="center_horizontal"
-                android:layout_alignParentStart="true"
-                android:layout_height="wrap_content">
-
-
-                <TextView
-                    android:id="@+id/text"
-                    android:layout_width="match_parent"
-                    android:layout_margin="5dp"
-                    android:text="لبن"
-                    android:textDirection="ltr"
-                    android:fontFamily="@font/cairo"
-                    android:layout_height="wrap_content" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:fontFamily="@font/cairo"
-                    android:text="$1255"
-                    android:layout_margin="5dp"
-                    android:textDirection="ltr"
-                    android:textColor="@color/blue"
-                    android:layout_height="wrap_content" />
-
-            </LinearLayout>
+            <ImageView
+                android:id="@+id/thumbnail"
+                android:layout_width="wrap_content"
+                android:layout_height="180dp"
+                android:src="@drawable/millkingone"
+                android:layout_marginBottom="20sp"
+                android:layout_margin="5dp"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:clickable="true"
+                android:scaleType="fitXY"
+                android:transitionName="transition"
+                />
 
 
+            <TextView
+                android:id="@+id/text"
+                android:layout_width="match_parent"
+                android:layout_margin="5dp"
+                android:text="لبن"
+                android:textDirection="ltr"
+                android:fontFamily="@font/cairo"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:fontFamily="@font/cairo"
+                android:text="$1255"
+                android:layout_margin="5dp"
+                android:textDirection="ltr"
+                android:textColor="@color/blue"
+                android:layout_height="wrap_content" />
 
 
-
-        </RelativeLayout>
-
-
-    </RelativeLayout>
+        </LinearLayout>
 
 
 
 
-
-</RelativeLayout>
+</android.support.v7.widget.CardView>
+    
+    
+    
