--- a/app/src/main/res/drawable/rec_items_shape.xml
+++ b/app/src/main/res/drawable/rec_items_shape.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="#FFF"/>
-    <corners android:radius="15sp"/>
+    <solid android:color="#000"/>
+    <corners android:radius="20sp"/>
 </shape>
