--- a/app/src/main/res/layout/activity_product_.xml
+++ b/app/src/main/res/layout/activity_product_.xml
@@ -70,6 +70,7 @@
         android:layout_marginTop="5dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+
         >
 
 
@@ -78,7 +79,8 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rectwo"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            >
 
 
 
