--- a/app/src/main/res/layout/rec_in_homepage_style.xml
+++ b/app/src/main/res/layout/rec_in_homepage_style.xml
@@ -5,9 +5,9 @@
     xmlns:card_view="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-
     android:layout_margin="5dp"
     app:cardCornerRadius="10dp"
+
     android:elevation="5dp"
     android:id="@+id/Card"
     card_view:cardUseCompatPadding="true"
@@ -22,18 +22,26 @@
             android:orientation="vertical">
 
 
-            <ImageView
-                android:id="@+id/thumbnail"
-                android:layout_width="160dp"
-                android:layout_height="160dp"
-                android:src="@drawable/millkingone"
-                android:layout_marginBottom="20sp"
-                android:background="@drawable/rec_items_shape"
-                android:layout_margin="5dp"
-                android:clickable="true"
-                android:scaleType="fitXY"
-                android:transitionName="transition"
-                />
+
+            <android.support.v7.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                >
+
+                <ImageView
+                    android:id="@+id/thumbnail"
+                    android:layout_width="160dp"
+                    android:layout_height="160dp"
+                    android:src="@drawable/millkingone"
+                    android:layout_marginBottom="20sp"
+                    android:layout_margin="5dp"
+                    android:scaleType="fitXY"
+                    android:clickable="true"
+                    android:transitionName="transition"
+                    />
+            </android.support.v7.widget.CardView>
+
+
 
             <RelativeLayout
                 android:layout_width="match_parent"
