--- a/app/src/main/res/layout/activity_product_.xml
+++ b/app/src/main/res/layout/activity_product_.xml
@@ -49,11 +49,10 @@
                 />
 
             <TextView
+                android:id="@+id/categoryName"
                 android:layout_width="wrap_content"
                 android:fontFamily="@font/cairo"
-                android:textColor="@color/blue"
                 android:gravity="center_horizontal|center_vertical"
-                android:text="الألبان"
                 android:layout_centerInParent="true"
                 android:layout_height="match_parent" />
             
@@ -79,7 +78,7 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rectwo"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             >
 
 
