--- a/app/src/main/res/layout/main_page_frag_layout.xml
+++ b/app/src/main/res/layout/main_page_frag_layout.xml
@@ -75,157 +75,15 @@
 
 
 
-            <LinearLayout
-                android:layout_width="300dp"
-                android:layout_height="60dp"
-                android:orientation="horizontal"
-                android:layout_gravity="center">
+           <android.support.v7.widget.RecyclerView
+               android:id="@+id/yellowCircle_rec"
+               android:layout_width="wrap_content"
+               android:layout_gravity="center_horizontal"
+               android:layout_height="wrap_content"
 
-                <ImageView
-                    android:layout_width="40dp"
-                    android:layout_margin="10dp"
-                    android:layout_gravity="center"
-                    android:scaleType="centerInside"
-                    android:background="@drawable/circle_shape"
-                    android:layout_height="40dp" />
-                <ImageView
-                    android:layout_width="40dp"
-                    android:layout_margin="10dp"
-                    android:layout_gravity="center"
-                    android:scaleType="centerInside"
-                    android:background="@drawable/circle_shape"
-                    android:layout_height="40dp" />
-                <ImageView
-                    android:layout_width="40dp"
-                    android:layout_margin="10dp"
-                    android:layout_gravity="center"
-                    android:background="@drawable/circle_shape"
-                    android:layout_height="40dp"
-                    android:scaleType="centerInside"
-                    />
-                <ImageView
-                    android:layout_width="40dp"
-                    android:layout_margin="10dp"
-                    android:layout_gravity="center"
-                    android:background="@drawable/circle_shape"
-                    android:layout_height="40dp"
-                    android:scaleType="centerInside"
-                    />
-                <ImageView
-                    android:layout_width="40dp"
-                    android:layout_margin="10dp"
-                    android:layout_gravity="center"
-                    android:background="@drawable/circle_shape"
-                    android:layout_height="40dp"
-                    android:scaleType="centerInside"
+               >
 
-                    />
-
-
-
-            </LinearLayout>
-
-
-
-            <LinearLayout
-                android:layout_width="300dp"
-                android:layout_height="60dp"
-                android:orientation="horizontal"
-                android:layout_gravity="center">
-
-                <ImageView
-                    android:layout_width="40dp"
-                    android:layout_margin="10dp"
-                    android:layout_gravity="center"
-                    android:background="@drawable/circle_shape"
-                    android:layout_height="40dp"
-                    android:scaleType="centerInside"
-
-                    />
-                <ImageView
-                    android:layout_width="40dp"
-                    android:layout_margin="10dp"
-                    android:layout_gravity="center"
-                    android:background="@drawable/circle_shape"
-                    android:layout_height="40dp"
-                    android:scaleType="centerInside"
-
-                    />
-                <ImageView
-                    android:layout_width="40dp"
-                    android:layout_margin="10dp"
-                    android:layout_gravity="center"
-                    android:background="@drawable/circle_shape"
-                    android:layout_height="40dp"
-                    android:scaleType="centerInside"
-                />
-                <ImageView
-                    android:layout_width="40dp"
-                    android:layout_margin="10dp"
-                    android:layout_gravity="center"
-                    android:background="@drawable/circle_shape"
-                    android:layout_height="40dp"
-                    android:scaleType="centerInside"
-                  />
-                <ImageView
-                    android:layout_width="40dp"
-                    android:layout_margin="10dp"
-                    android:layout_gravity="center"
-                    android:background="@drawable/circle_shape"
-                    android:layout_height="40dp"
-                    android:scaleType="centerInside"
-
-                    />
-
-
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="300dp"
-                android:layout_height="60dp"
-                android:orientation="horizontal"
-                android:layout_gravity="center"
-                android:gravity="center_horizontal"
-                >
-
-                <ImageView
-                    android:layout_width="40dp"
-                    android:layout_margin="10dp"
-                    android:layout_gravity="center"
-                    android:background="@drawable/circle_shape"
-                    android:layout_height="40dp"
-                    android:scaleType="centerInside"
-
-                    />
-                <ImageView
-                    android:layout_width="40dp"
-                    android:layout_margin="10dp"
-                    android:layout_gravity="center"
-                    android:background="@drawable/circle_shape"
-                    android:layout_height="40dp"
-                    android:scaleType="centerInside"
-
-                    />
-                <ImageView
-                    android:layout_width="40dp"
-                    android:layout_margin="10dp"
-                    android:layout_gravity="center"
-                    android:background="@drawable/circle_shape"
-                    android:layout_height="40dp"
-                    android:scaleType="centerInside"
-                   />
-                <ImageView
-                    android:layout_width="40dp"
-                    android:layout_margin="10dp"
-                    android:layout_gravity="center"
-                    android:background="@drawable/circle_shape"
-                    android:layout_height="40dp"
-                    android:scaleType="centerInside"
-                   />
-
-
-            </LinearLayout>
+           </android.support.v7.widget.RecyclerView>
 
             <Button
 
