--- a/app/src/main/res/layout/activity_product_.xml
+++ b/app/src/main/res/layout/activity_product_.xml
@@ -15,51 +15,69 @@
         android:layout_width="match_parent"
         android:background="@android:color/white"
         android:elevation="10dp"
-        android:layout_height="60dp">
+        android:layout_height="wrap_content">
         
         <RelativeLayout
             android:layout_width="match_parent"
-            android:paddingEnd="5dp"
-            android:paddingStart="0dp"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
 
 
+<LinearLayout
+    android:id="@+id/linear"
+    android:gravity="center_vertical"
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+    <ImageView
+        android:id="@+id/backhome"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_gravity="start|center_vertical"
+        android:scaleType="centerInside"
+        android:layout_margin="5dp"
+        android:src="@drawable/ic_arrow_back_black_24dp"
+        android:layout_weight="1"
+        />
+    <TextView
+        android:id="@+id/categoryName"
+        android:layout_width="wrap_content"
+        android:fontFamily="@font/cairo"
+        android:gravity="center_horizontal|center_vertical"
+        android:layout_height="50dp"
+        android:layout_weight="9"/>
 
-            <ImageView
-                android:id="@+id/backhome"
-                android:layout_width="50dp"
-                android:layout_height="30dp"
-                android:layout_gravity="start|center_vertical"
-                android:scaleType="centerInside"
-                android:layout_margin="5dp"
-                android:src="@drawable/ic_arrow_back_black_24dp"
-                />
+    <ImageView
+        android:id="@+id/searchindadding"
+        android:layout_width="50dp"
+        android:src="@drawable/ic_search_black_24dp"
+        android:layout_height="50dp"
+        android:scaleType="centerInside"
+        android:layout_margin="10dp"
+        android:layout_weight="1"
+        />
 
-            <ImageView
-                android:id="@+id/searchindadding"
-                android:layout_width="50dp"
-                android:src="@drawable/ic_search_black_24dp"
-                android:layout_alignParentEnd="true"
-                android:layout_height="50dp"
-                android:scaleType="centerInside"
-                android:layout_margin="10dp"
-                />
 
-            <TextView
-                android:id="@+id/categoryName"
-                android:layout_width="wrap_content"
-                android:fontFamily="@font/cairo"
-                android:gravity="center_horizontal|center_vertical"
-                android:layout_centerInParent="true"
-                android:layout_height="match_parent" />
-            
+</LinearLayout>
+
+
+            <android.support.v7.widget.SearchView
+                android:id="@+id/SearchView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                android:background="@color/white"
+                android:layout_below="@+id/linear"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                >
+
+            </android.support.v7.widget.SearchView>
         </RelativeLayout>
 
         
     </android.support.v7.widget.Toolbar>
+
 
 
 
@@ -69,7 +87,6 @@
         android:layout_marginTop="5dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
         >
 
 
