--- a/app/src/main/res/layout/rec_in_homepage_style.xml
+++ b/app/src/main/res/layout/rec_in_homepage_style.xml
@@ -67,6 +67,7 @@
                         android:layout_height="wrap_content" />
 
                     <TextView
+                        android:id="@+id/price"
                         android:layout_width="match_parent"
                         android:fontFamily="@font/cairo"
                         android:text="$1255"
