--- a/app/src/main/res/layout/basket_layout.xml
+++ b/app/src/main/res/layout/basket_layout.xml
@@ -99,6 +99,7 @@
                       android:elevation="2dp"
                       />
                   <TextView
+                      android:id="@+id/quantity"
                       android:gravity="center_vertical|center_horizontal"
                       android:text="1"
                       android:layout_width="30dp"
@@ -141,18 +142,11 @@
                         android:layout_height="wrap_content"
                         android:textColor="@color/bacG"
                         android:fontFamily="@font/cairo"
+                        android:layout_marginTop="5dp"
                         android:text="المراعي"
                         android:textSize="12sp"
                         />
-                    <TextView
-                        android:id="@+id/quantity"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/bacG"
-                        android:fontFamily="@font/cairo"
-                        android:text="1 ك"
-                        android:textSize="12sp"
-                      />
+
 
 
                 </LinearLayout>
