--- a/app/src/main/res/layout/basket_layout.xml
+++ b/app/src/main/res/layout/basket_layout.xml
@@ -167,7 +167,7 @@
                         android:layout_height="wrap_content"
                         android:textColor="@color/blue"
                         android:fontFamily="@font/cairo"
-                        android:text="100 L.E"
+                        android:text=""
                         />
 
 
