--- a/app/src/main/res/layout/fragment_basket.xml
+++ b/app/src/main/res/layout/fragment_basket.xml
@@ -26,7 +26,7 @@
        android:background="@drawable/button_background"
        android:layout_height="80dp"
        android:gravity="center_vertical|center_horizontal"
-       android:visibility="gone"
+       android:visibility="visible"
        >
 
       <TextView
