--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -10,28 +10,49 @@
     tools:context=".View.HomePage"
     >
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        >
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/Rec_Nav"
             android:layout_width="235dp"
             android:layout_height="match_parent"
-            android:layout_marginTop="50dp"
-            android:layout_marginBottom="50dp"
+            android:layout_marginTop="5dp"
+            android:layout_weight="1"
             >
         </android.support.v7.widget.RecyclerView>
 
-
+    <LinearLayout
+        android:layout_weight="3"
+        android:layout_width="235dp"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        >
+        <View
+            android:layout_width="100dp"
+            android:layout_height="1dp"
+            android:layout_gravity="center_horizontal"
+            android:background="#fff" />
         <TextView
+            android:id="@+id/settings"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginTop="2dp"
+            android:fontFamily="@font/cairo"
+            android:gravity="center_vertical"
+            android:padding="5dp"
+            android:text="اعدادات الحساب"
+            android:textColor="@color/white"
+            android:textSize="19dp" />
+        <TextView
+
             android:id="@+id/logout"
-            android:layout_width="wrap_content"
-            android:layout_height="60dp"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginEnd="10dp"
-            android:layout_marginTop="8dp"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginTop="2dp"
             android:fontFamily="@font/cairo"
             android:gravity="center_vertical"
             android:padding="5dp"
@@ -39,7 +60,8 @@
             android:textColor="@color/white"
             android:textSize="19dp" />
 
-    </RelativeLayout>
+    </LinearLayout>
+    </LinearLayout>
 
 
 
