--- a/app/src/main/res/layout/basket_layout.xml
+++ b/app/src/main/res/layout/basket_layout.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layoutDirection="ltr"
     android:layout_margin="5dp"
+    android:elevation="8dp"
     android:layout_height="100dp">
 
 
@@ -20,7 +21,7 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:fontFamily="@font/cairo"
-            android:layout_margin="20dp"
+            android:layout_margin="5dp"
             android:layout_gravity="end|center_vertical"
             android:src="@drawable/ic_delete_sweep_black_24dp"
             android:scaleType="fitXY"
@@ -53,15 +54,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_marginEnd="5dp"
+        android:layout_marginEnd="60dp"
         android:layout_marginStart="5dp"
-        android:visibility="visible"
-        android:elevation="8dp"
+        android:visibility="visible" android:elevation="8dp"
         >
 
         <android.support.v7.widget.CardView
             android:id="@+id/Cardview"
-
+            android:elevation="8dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
