--- a/app/src/main/res/layout/main_page_frag_layout.xml
+++ b/app/src/main/res/layout/main_page_frag_layout.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@android:color/white"
+
+    >
 
 
 
@@ -10,6 +14,11 @@
         android:overScrollMode="never"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+
+       <RelativeLayout
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content">
 
 
 
@@ -23,13 +32,13 @@
 
 
 
-            <ImageView
-                android:layout_width="200dp"
-                android:layout_gravity="center_horizontal"
-                android:scaleType="fitXY"
-                android:src="@drawable/ic_lrahtk"
-                android:layout_height="150dp"
-                android:layout_marginTop="8dp"/>
+            <android.support.v4.view.ViewPager
+                android:id="@+id/ViewPager"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:layout_margin="10dp"
+                />
+
 
 
 
@@ -106,13 +115,29 @@
                 android:layout_height="wrap_content" />
 
         </LinearLayout>
+           <LinearLayout
+               android:id="@+id/linear2"
+               android:layout_width="match_parent"
+               android:layout_height="200dp"
+               android:orientation="vertical"
+               android:layout_margin="10dp"
+               >
+
+               <me.relex.circleindicator.CircleIndicator
+                   android:id="@+id/Indictor"
+                   android:layout_width="match_parent"
+                   android:layout_marginTop="155dp"
+                   android:layout_height="50dp"
+
+                   />
+
+           </LinearLayout>
 
 
 
 
 
-
-
+       </RelativeLayout>
 
     </android.support.v4.widget.NestedScrollView>
 
