--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -55,4 +55,15 @@
         <item name="colorControlNormal">@color/blue</item>
         <item name="colorControlActivated">@color/colorAccent</item>
     </style>
+
+    <style name="PauseDialog" parent="@android:style/Theme.Dialog">
+        <item name="android:windowAnimationStyle">@style/PauseDialogAnimation</item>
+
+    </style>
+
+    <style name="PauseDialogAnimation">
+        <item name="android:windowEnterAnimation">@anim/downtoup</item>
+        <item name="android:windowExitAnimation">@anim/fadeout</item>
+
+    </style>
 </resources>
